--- a/src/Kooco.Pikachu.Blazor/Pages/MainMenu/MyMainMenuItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/MainMenu/MyMainMenuItem.razor
@@ -7,7 +7,7 @@
 @attribute [Dependency(ReplaceServices = true)]
 @{
 	var cssClass = string.IsNullOrEmpty(MenuItem.MenuItem.CssClass) ? string.Empty : MenuItem.MenuItem.CssClass;
-	var customComponentType = MenuItem.MenuItem.GetComponentTypeOrDefault(); 
+	var customComponentType = MenuItem.MenuItem.GetComponentTypeOrDefault();
 }
 
 
@@ -23,11 +23,13 @@
 	}
 	else if (MenuItem.MenuItem.Url.TrimStart('~') == currentUri.PathAndQuery)
 	{
-		<a class="lpx-menu-item-link lpx-menu-item @(MenuItem.IsActive ? "selected" : "") @cssClass" id="@MenuItem.MenuItem.ElementId">
+		<a class="lpx-menu-item-link lpx-menu-item my-2 @(MenuItem.IsActive ? "selected" : "") @cssClass"
+			id="@MenuItem.MenuItem.ElementId">
 			<span class="lpx-menu-item-icon"><i class="lpx-icon @(MenuItem.MenuItem.Icon ?? "")" aria-hidden="true"></i></span>
 
 			<span class="lpx-menu-item-text hidden-in-hover-trigger">@MenuItem.MenuItem.DisplayName
-				@if (MenuItem.MenuItem.CustomData.TryGetValue("data-notification-count", out var count) && count != null && count.ToString() != "0")
+				@if (MenuItem.MenuItem.CustomData.TryGetValue("data-notification-count", out var count) && count != null &&
+						count.ToString() != "0")
 				{
 					<span class="notification-badge">@count</span>
 				}
@@ -36,11 +38,14 @@
 	}
 	else
 	{
-		<a href="@url" target="@MenuItem.MenuItem.Target" class="lpx-menu-item-link lpx-menu-item @(MenuItem.IsActive ? "selected" : "") @cssClass" id="@MenuItem.MenuItem.ElementId">
+		<a href="@url" target="@MenuItem.MenuItem.Target"
+			class="lpx-menu-item-link lpx-menu-item my-2 @(MenuItem.IsActive ? "selected" : "") @cssClass"
+			id="@MenuItem.MenuItem.ElementId">
 			<span class="lpx-menu-item-icon"><i class="lpx-icon @(MenuItem.MenuItem.Icon ?? "")" aria-hidden="true"></i></span>
 
 			<span class="lpx-menu-item-text hidden-in-hover-trigger">@MenuItem.MenuItem.DisplayName
-				@if (MenuItem.MenuItem.CustomData.TryGetValue("data-notification-count", out var count) && count != null && count.ToString() != "0")
+				@if (MenuItem.MenuItem.CustomData.TryGetValue("data-notification-count", out var count) && count != null &&
+						count.ToString() != "0")
 				{
 					<span class="notification-badge">@count</span>
 				}
@@ -56,19 +61,22 @@ else
 	}
 	else
 	{
-		<a @onclick:preventDefault @onclick="ToggleMenu" class="lpx-menu-item-link lpx-menu-item @(MenuItem.IsActive || MenuItem.IsOpen ? "selected" : "")">
+		<a @onclick:preventDefault @onclick="ToggleMenu"
+			class="lpx-menu-item-link lpx-menu-item my-2 @(MenuItem.IsActive || MenuItem.IsOpen ? "selected" : "")">
 
 			<span class="lpx-menu-item-icon"><i class="lpx-icon @(MenuItem.MenuItem.Icon ?? "")" aria-hidden="true"></i></span>
 
 			<span class="lpx-menu-item-text hidden-in-hover-trigger">@MenuItem.MenuItem.DisplayName
-			
+
 			</span>
 
-			<i class="dd-icon hidden-in-hover-trigger caret bi-chevron-@(MenuItem.IsOpen ? "up" : "down")" aria-hidden="true"></i>
+			<i class="dd-icon hidden-in-hover-trigger caret bi-chevron-@(MenuItem.IsOpen ? "up" : "down")"
+				aria-hidden="true"></i>
 		</a>
 	}
 
-	<ul id="@MenuItem.MenuItem.ElementId" class="lpx-inner-menu hidden-in-hover-trigger @(MenuItem.IsOpen ? "" : "collapsed") @cssClass">
+	<ul id="@MenuItem.MenuItem.ElementId"
+		class="lpx-inner-menu hidden-in-hover-trigger @(MenuItem.IsOpen ? "" : "collapsed") @cssClass">
 		@foreach (var childMenuItem in MenuItem.Items)
 		{
 			<li class="lpx-inner-menu-item">
