--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -301,14 +301,14 @@
                 <InputNumber class="form-control no-spinners" TValue="float" @bind-Value="@CreateUpdateSetItemDto.SetItemPrice" />
             </div>
         </div>
-        <div class="row mt-2">
+       @*  <div class="row mt-2">
             <div class="col-2">
                 <label>@L["SetGroupBuyPrice"]</label>
             </div>
             <div class="col-3">
                 <InputNumber class="form-control no-spinners" TValue="int?" @bind-Value="@CreateUpdateSetItemDto.GroupBuyPrice" />
             </div>
-        </div>
+        </div> *@
         <div class="row mt-2">
             <div class="col-2">
                 <label>@L["SellableQuantity"]</label>
