--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -1,19 +1,20 @@
 ﻿@page "/Orders"
+@using Blazorise;
+@using Blazorise;
+@using Blazorise.LoadingIndicator;
 @using Kooco.Pikachu.DeliveryTemperatureCosts
 @using Kooco.Pikachu.ElectronicInvoiceSettings
 @using Kooco.Pikachu.EnumValues;
+@using Kooco.Pikachu.GroupBuys;
+@using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderDeliveries
 @using Kooco.Pikachu.OrderItems;
-@using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.Orders.Repositories
 @using Kooco.Pikachu.StoreLogisticOrders
 @using Microsoft.Extensions.Localization;
-@using Blazorise;
-@using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
-@using Blazorise.LoadingIndicator;
-@using Kooco.Pikachu.Items.Dtos;
 @inject IStringLocalizer<PikachuResource> L;
 @inject NavigationManager NavigationManager;
 @inject IUiMessageService _uiMessageService;
