--- a/src/Kooco.Pikachu.Blazor/Components/Common/FormHeader.razor
+++ b/src/Kooco.Pikachu.Blazor/Components/Common/FormHeader.razor
@@ -1,4 +1,6 @@
-﻿<Card>
+﻿@using Kooco.Pikachu.Blazor.Components.Common;
+
+<Card>
     <CardHeader TextSize="TextSize.Heading4">
         <PageHeader Title="@Title" />
     </CardHeader>
